apps/downloads/prowlarr/app/auth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prowlarr-auth
spec:
  plugin:
    traefik-oidc-auth:
      Provider:
        Url: "https://idm.lucadev.de/oauth2/openid/prowlarr"
        ClientId: "prowlarr"
        ClientSecret: "urn:k8s:secret:prowlarr-secret:client-secret"
        TokenValidation: "IdToken"
        UsePkce: true
      Scopes: ["openid", "profile"]

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prowlarr
  oidc:
    provider:
      issuer: https://idm.lucadev.de/oauth2/openid/prowlarr
    clientID: prowlarr
    clientSecret:
      name: prowlarr-secret
    redirectURL: /
    logoutPath: /logout
