apps/downloads/prowlarr/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: 9696
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: 9696
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: shelfmark
      ports:
        - port: 9696
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
          podSelector:
            matchLabels:
              app.kubernetes.io/name: aerofoil
      ports:
        - port: 9696
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: 7878
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: 8989
          protocol: TCP
